force-app/main/default/objects/RTV_POS_ERROR__c/RTV_POS_ERROR__c.object-meta.xml
<CustomObject>
    <label>RTV POS ERROR</label>
    <nameField>
        <displayFormat>ERR#{00000}</displayFormat>
        <label>ERR_NO</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RTV POS ERRORS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>