force-app/main/default/objects/RTV_POS_ERROR__c/fields/ERR_DATE__c.field-meta.xml
<CustomField>
    <fullName>ERR_DATE__c</fullName>
    <label>ERR_DATE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>