force-app/main/default/objects/RTV_POS_ERROR__c/fields/ERR_FILE_NAME__c.field-meta.xml
<CustomField>
    <fullName>ERR_FILE_NAME__c</fullName>
    <label>ERR_FILE_NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>