force-app/main/default/objects/RTV_POS_ERROR__c/fields/ERR_MSG__c.field-meta.xml
<CustomField>
    <fullName>ERR_MSG__c</fullName>
    <label>ERR_MSG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>